--- a/playwright/package.json
+++ b/playwright/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@playwright/test": "^1.42.1",
+    "express": "^4.18.2",
+    "prom-client": "^14.2.0",
     "winston": "^3.11.0"
   }
-} 
+}
