--- a/playwright/k8s/monitoring/loki-values.yaml
+++ b/playwright/k8s/monitoring/loki-values.yaml
@@ -1,5 +1,9 @@
 grafana:
   enabled: true
+  service:
+    type: LoadBalancer
+  nodeSelector:
+    role: monitoring
   image:
     tag: "10.2.0"
   adminPassword: password
@@ -9,6 +13,17 @@ grafana:
   persistence:
     enabled: false
   defaultDashboardsEnabled: false
+  datasources:
+    datasources.yaml:
+      apiVersion: 1
+      datasources:
+        - name: Loki
+          type: loki
+          access: proxy
+          url: http://loki.monitoring.svc.cluster.local:3100
+          isDefault: true
+          jsonData:
+            maxLines: 1000
   dashboardProviders:
     dashboardproviders.yaml:
       apiVersion: 1
@@ -42,7 +57,7 @@ grafana:
                 "title": "Avg TTL (1m) HTTP 200",
                 "targets": [
                   {
-                    "expr": "avg_over_time({pod=~\"playwright-.*\"} | json | line_format \"{{.log}}\" | json | __error__=\"\" | message=\"Page load metrics\" | status=\"200\" | unwrap loadTime [1m]) by (url)",
+                    "expr": "avg_over_time({pod=~\"playwright-.*\"} | json | __error__=\"\" | message=\"Page load metrics\" | status=\"200\" | unwrap loadTime [1m]) by (url)",
                     "refId": "A",
                     "datasource": {
                       "type": "loki",
@@ -57,7 +72,7 @@ grafana:
                 "title": "Count of non-200 HTTP",
                 "targets": [
                   {
-                    "expr": "sum by (url)(count_over_time({pod=~\"playwright-.*\"} | json | line_format \"{{.log}}\" | json |  __error__=\"\" | message=\"Page load metrics\" | status!=\"200\" | label_format status=\"{{.status}}\" [1m]))",
+                    "expr": "sum by (url)(count_over_time({pod=~\"playwright-.*\"} | json |  __error__=\"\" | message=\"Page load metrics\" | status!=\"200\" | label_format status=\"{{.status}}\" [1m]))",
                     "refId": "A",
                     "datasource": {
                       "type": "loki",
@@ -71,6 +86,9 @@ grafana:
           }
 
 promtail:
+  config:
+    clients:
+      - url: http://loki.monitoring.svc.cluster.local:3100/loki/api/v1/push
   enabled: true
 
 loki:
@@ -79,3 +97,11 @@ loki:
   enabled: true
   persistence:
     enabled: false
+  service:
+    type: ClusterIP
+  labels:
+    app: loki
+    app.kubernetes.io/name: loki
+  podLabels:
+    app: loki
+    app.kubernetes.io/name: loki
