fix: set uid for loki datasource

--- a/playwright/k8s/monitoring/loki-values.yaml
+++ b/playwright/k8s/monitoring/loki-values.yaml
@@ -19,6 +19,7 @@ grafana:
       datasources:
         - name: Loki
           type: loki
+          uid: loki
           access: proxy
           url: http://loki.monitoring.svc.cluster.local:3100
           isDefault: true
